working multiple ayo

--- a/static/js/dropdown.html
+++ b/static/js/dropdown.html
@@ -104,13 +104,13 @@
   </div>    
   </li>
 </ul>
-<input type="hidden" id="{{n}}-day1" name="{{n}}-day1" value="">
-<input type="hidden" id="{{n}}-starthour1" name="{{n}}-start_hour1" value="">
-<input type="hidden" id="{{n}}-startminute1" name="{{n}}-start_minute1" value="">
-<input type="hidden" id="{{n}}-starttype1" name="{{n}}-start_type1" value="">
-<input type="hidden" id="{{n}}-endhour1" name="{{n}}-end_hour1" value="">
-<input type="hidden" id="{{n}}-endminute1" name="{{n}}-end_minute1" value="">
-<input type="hidden" id="{{n}}-endtype1" name="{{n}}-end_type1" value="">
+<input type="hidden" id="{{n}}-day" name="{{n}}-day" value="">
+<input type="hidden" id="{{n}}-starthour" name="{{n}}-start_hour" value="">
+<input type="hidden" id="{{n}}-startminute" name="{{n}}-start_minute" value="">
+<input type="hidden" id="{{n}}-starttype" name="{{n}}-start_type" value="">
+<input type="hidden" id="{{n}}-endhour" name="{{n}}-end_hour" value="">
+<input type="hidden" id="{{n}}-endminute" name="{{n}}-end_minute" value="">
+<input type="hidden" id="{{n}}-endtype" name="{{n}}-end_type" value="">
 
 
 <br><br><br>
