functional dropdown daysgit status

--- a/static/html/dropdown.html
+++ b/static/html/dropdown.html
@@ -99,8 +99,8 @@
 
   <li class="list"><a class="m" child="m4" menu="{{n}}">Location</a>
   <div id="menu{{n}}-m4" class="menu{{n}} d 4">
-      <input class="menu{{n}} d2 4" type="checkbox" value="home" name="day1_address" > <textbox class="menu{{n}} d2 4 text2">Home</textbox><br>
-      <input class="menu{{n}} d2 4" type="checkbox" value="school" name="day1_address"> <textbox class="menu{{n}} d2 4 text2">School</textbox>
+      <input class="menu{{n}} d2 4" type="checkbox" value="home" name="{{n}}-address" > <textbox class="menu{{n}} d2 4 text2">Home</textbox><br>
+      <input class="menu{{n}} d2 4" type="checkbox" value="school" name="{{n}}-address"> <textbox class="menu{{n}} d2 4 text2">School</textbox>
   </div>    
   </li>
 </ul>
