adjust dropdown for more applicability

--- a/static/html/dropdown.html
+++ b/static/html/dropdown.html
@@ -1,13 +1,13 @@
 <ul id="menu{{n}}-times" class="dropdownL">
   <li class="list"><a class="m" child="m1" id="menu{{n}}-day" menu="{{n}}">Days</a>
   <div id="menu{{n}}-m1" class="menu{{n}} d">
-      <a class="menu{{n}} d2 d2F 1" parent="m1" val="mon" day="{{n}}">Monday</a>
-      <a class="menu{{n}} d2 d2F 1" parent="m1" val="tues" day="{{n}}">Tuesday</a>
-      <a class="menu{{n}} d2 d2F 1" parent="m1" val="weds" day="{{n}}">Wednesday</a>
-      <a class="menu{{n}} d2 d2F 1" parent="m1" val="thurs" day="{{n}}">Thursday</a>
-      <a class="menu{{n}} d2 d2F 1" parent="m1" val="fri" day="{{n}}">Friday</a>
-      <a class="menu{{n}} d2 d2F 1" parent="m1" val="sat" day="{{n}}">Sunday</a>
-      <a class="menu{{n}} d2 d2F 1" parent="m1" val="sun" day="{{n}}">Saturday</a>
+      <a class="menu{{n}} d2 d2F day" parent="m1" val="mon" day="{{n}}">Monday</a>
+      <a class="menu{{n}} d2 d2F day" parent="m1" val="tues" day="{{n}}">Tuesday</a>
+      <a class="menu{{n}} d2 d2F day" parent="m1" val="weds" day="{{n}}">Wednesday</a>
+      <a class="menu{{n}} d2 d2F day" parent="m1" val="thurs" day="{{n}}">Thursday</a>
+      <a class="menu{{n}} d2 d2F day" parent="m1" val="fri" day="{{n}}">Friday</a>
+      <a class="menu{{n}} d2 d2F day" parent="m1" val="sat" day="{{n}}">Sunday</a>
+      <a class="menu{{n}} d2 d2F day" parent="m1" val="sun" day="{{n}}">Saturday</a>
     </div>   
   </li>
 
